# splatoon2-buki-roulette

./: .gitignore  .pylintrc  Makefile  README.md  mypy.ini  pyproject.toml
splatoon2_buki_roulette/: __init__.py  buki_list.csv  buki_list.py  splatoon2_buki_roulette.py
tests/: test_buki_list.py
